--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h3>stay safe, stay home</h3>
             <p>We long to return to normal, but **normal led to this**. To avert the future pandemics we know are
                 coming, we MUST grapple with all the ways normal failed us. We have to build something better. </p>
-            <a href="#" class="btn">protect now</a>
+            <a href="https://www.mohfw.gov.in" class="btn">protect now</a>
 
         </div>
 
