--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
             <div class="box">
                 <h3>locations</h3>
                 <a href="https://delhifightscorona.in" target="_blank">Delhi</a>
-                <a href="https://www.mumbailive.com/en/liveupdates/coronavirus-covid-19-live-updates" target="_blank">Maharastra</a>
-                <a href="http://sarthak.nhmmp.gov.in/covid/" target="_blank">Madya Pradesh</a>
+                <a href="https://nmmchealthfacilities.com/HospitalInfo/showhospitalist" target="_blank">Maharastra</a>
+                <a href="http://sarthak.nhmmp.gov.in/covid/facility-bed-occupancy-details/" target="_blank">Madya Pradesh</a>
                 <a href="https://www.wbhealth.gov.in/contents/corona_virus" target="_blank">West Bengal</a>
                 <a href="http://dgmhup.gov.in/en/default" target="_blank">Uttar Pradesh</a>
                 <a href="https://stopcorona.tn.gov.in" target="_blank">Tamil Nadu</a>
