--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <a href="https://nmmchealthfacilities.com/HospitalInfo/showhospitalist" target="_blank">Maharastra</a>
                 <a href="http://sarthak.nhmmp.gov.in/covid/facility-bed-occupancy-details/" target="_blank">Madya Pradesh</a>
                 <a href="https://www.wbhealth.gov.in/contents/corona_virus" target="_blank">West Bengal</a>
-                <a href="http://dgmhup.gov.in/en/default" target="_blank">Uttar Pradesh</a>
+                <a href="http://dgmhup.gov.in/en/CovidReport" target="_blank">Uttar Pradesh</a>
                 <a href="https://stopcorona.tn.gov.in" target="_blank">Tamil Nadu</a>
             </div>
 
