--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
         </div>
 
-        <h1 class="credit"> Powered by <a href="https://kallxcode.github.io/CV/" target="_blank"> KALLXCODE </a> </h1>
+        <h1 class="credit"> Powered by <a href="#" target="_blank"> KALLXCODE </a> </h1>
 
     </section>
 
