--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@
             <div class="box" >
                 <h3>contact info</h3>
                 <p> <i class="fas fa-phone"></i> +91 6281535020. </p>
-                <p> <i class="fas fa-envelope"></i> kallxcode7@gmail.com </p>
+                <p> <i class="fas fa-envelope"></i> VITBhopal@gmail.com </p>
                 <p> <i class="fas fa-map-marker-alt"></i> Bhopal, India. </p>
                 <div class="share">
-                    <a href="https://www.linkedin.com/in/manojkalyanam/" target="_blank" class="fab fa-linkedin"></a>
-                    <a href="https://www.facebook.com/manoj.kalyanam.5" target="_blank"class ="fab fa-facebook-f"></a>
+                    <a href="https://www.linkedin.com/in/" target="_blank" class="fab fa-linkedin"></a>
+                    <a href="https://www.facebook.com/" target="_blank"class ="fab fa-facebook-f"></a>
                     <a href="https://mail.google.com/mail/u/0/?fs=1&to=manojkalyanam7@gmail.com&tf=cm" target="_blank" class="fa fa-envelope"></a>
-                    <a href="https://www.instagram.com/manoj_kall/" target="_blank" class="fab fa-instagram"></a>
+                    <a href="https://www.instagram.com/" target="_blank" class="fab fa-instagram"></a>
                 </div>
             </div>
 
