--- a/index.html
+++ b/index.html
@@ -282,16 +282,16 @@
                 <p> <i class="fas fa-envelope"></i> VITBhopal@gmail.com </p>
                 <p> <i class="fas fa-map-marker-alt"></i> Bhopal, India. </p>
                 <div class="share">
-                    <a href="https://www.linkedin.com/in/" target="_blank" class="fab fa-linkedin"></a>
-                    <a href="https://www.facebook.com/" target="_blank"class ="fab fa-facebook-f"></a>
+                    <a href="https://www.linkedin.com/in/manojkalyanam/" target="_blank" class="fab fa-linkedin"></a>
+                    <a href="https://www.facebook.com/manoj.kalyanam.5" target="_blank"class ="fab fa-facebook-f"></a>
                     <a href="https://mail.google.com/mail/u/0/?fs=1&to=manojkalyanam7@gmail.com&tf=cm" target="_blank" class="fa fa-envelope"></a>
-                    <a href="https://www.instagram.com/" target="_blank" class="fab fa-instagram"></a>
+                    <a href="https://www.instagram.com/manoj_kall" target="_blank" class="fab fa-instagram"></a>
                 </div>
             </div>
 
         </div>
 
-        <h1 class="credit"> Powered by <a href="#" target="_blank"> KALLXCODE </a> </h1>
+        <h1 class="credit"> Powered by <a href="https://kallxcode.github.io/CV/" target="_blank"> KALLXCODE </a> </h1>
 
     </section>
 
